Closed Bug 745495 Opened 14 years ago Closed 14 years ago

Crash using screen object from removed iframe

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla14
Tracking Status
firefox14 - verified

People

(Reporter: jruderman, Assigned: mounir)

References

Details

(Keywords: crash, regression, testcase, Whiteboard: [qa+])

Crash Data

Attachments

(3 files)

Probably a regression from bug 720799 based on this line: #3 0x00000001014af0a3 in nsLayoutUtils::GetDeviceContextForScreenInfo (aWindow=0x0) at layout/base/nsLayoutUtils.cpp:3994
Severity: normal → critical
Crash Signature: [@ nsLayoutUtils::GetDeviceContextForScreenInfo] → [@ nsLayoutUtils::GetDeviceContextForScreenInfo] [@ nsPIDOMWindow::GetDocShell()]
OS: Mac OS X → All
Hardware: x86_64 → All
Attached patch Patch v1Splinter Review
Assignee: nobody → mounir
Status: NEW → ASSIGNED
Attachment #615135 - Flags: review?(bugs)
Attachment #615135 - Flags: review?(bugs) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla14
Attachment #615135 - Flags: checkin+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Verified that Firefox 14 beta 8 does not crash when using the test case attached in Comment 1. Verified on Windows 7, Ubuntu 12.04 and Mac OS X 10.6: Mozilla/5.0 (Windows NT 6.1; rv:14.0) Gecko/20100101 Firefox/14.0 Mozilla/5.0 (X11; Linux i686; rv:14.0) Gecko/20100101 Firefox/14.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:14.0) Gecko/20100101 Firefox/14.0 Verified also in Socorro and I couldn't find any crash reports with the same signature.
Whiteboard: [qa+]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: