Bug 745495 - Fix crash when using screen object from removed iframe. r=smaug